--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -66,6 +66,10 @@
                         <x-icon name="tune"></x-icon>
                         <x-label>Opciones de descarga</x-label>
                     </x-button>
+                    <x-button class="menu-item" skin="nav" id="license-info-btn">
+                        <x-icon name="info"></x-icon>
+                        <x-label>Licencia</x-label>
+                    </x-button>
                     <hr>
                     <x-button class="menu-item" skin="nav" id="exit-button">
                         <x-icon name="logout"></x-icon>
